<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_ViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/rb_tab_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tab_1_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_1"
                android:textColor="@drawable/tab_text_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rb_tab_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tab_2_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_2"
                android:textColor="@drawable/tab_text_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rb_tab_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/tab_3_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_3"
                android:textColor="@drawable/tab_text_selector"/>

        </LinearLayout>

    </LinearLayout>








   <!-- <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/colorPrimary">

        <RadioButton
            android:id="@+id/rb_tab_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:drawableTop="@drawable/tab_1_selector"
            android:text="@string/tab_1"
            android:textSize="12sp"
            android:textColor="@drawable/tab_text_selector"/>

        <RadioButton
            android:id="@+id/rb_tab_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:drawableTop="@drawable/tab_2_selector"
            android:text="@string/tab_2"
            android:textSize="12sp"
            android:textColor="@drawable/tab_text_selector"/>

        <RadioButton
            android:id="@+id/rb_tab_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:button="@null"
            android:drawableTop="@drawable/tab_3_selector"
            android:text="@string/tab_3"
            android:textSize="12sp"
            android:textColor="@drawable/tab_text_selector"/>
    </RadioGroup>-->

</LinearLayout>